# strava_viewer

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
app/: __init__.py  activities_imports_manager.py  activities_manager.py  app.py  postgres.py  routes.py  setup.py  strava.py  tasks.py  users_manager.py
app/assets/: __init__.py  activities_import.py  activity.py  user.py  users_manager.py
app/backend/: tasks.py
app/conf/: app.json  connectors.json
app/confs/: __init__.py  conf.py  sql.py
app/connections/: __init__.py  postgres.py  strava.py
app/connectors/: __init__.py  postgres.py  strava.py
app/loaders/: __init__.py  conf.py  sql.py
app/sql/: create_table_activities_imports.sql  create_table_users.sql  get_activities_import.sql  get_user.sql  insert_activities_import.sql  insert_user.sql  save_user.sql  update_activities_import.sql  update_user.sql
app/static/: package-lock.json  package.json
app/templates/: children.html.doc  flash_message.html  home.html  index.html  layout.html  login.html  map.html  sign_up.html
src/conf/: connectors.json  login.json
src/css/: common.css  consts.css  form.css
src/html/: log_in.html  sign_up.html
src/javascript/: backend.js  python_api.js  script.js  sign_up.js
src/python/: conf.py  flask_app.py  pyproject.toml
src/python/api/: strava.py
src/python/connectors/: __init__.py  postgres.py  strava.py
src/python/utils/: __init__.py  account.py  conf.py  sql.py
src/sql/: create_users.sql  (+8 more)
(+32 files in other folders)
