[project]
name = "strava_viewer"
version = "0.1.0"

dependencies = [
  "dotenv",
  "flask",
  "flask_cors",
  "polars",
  "psycopg2",
  "requests",
  "polars"
]

[tool.setuptools]
py-modules = []

[tool.pylint.main]
source = ["connectors", "utils", "flask_app.py"]

ignore = ["build", "node_modules", "strava_viewer.egg-info", "venv"]

[tool.pylint."MESSAGES CONTROL"]
disable = []

[tool.pylint.format]
max-line-length = 100